# cmake-example

./: CMakeLists.txt
MyApp/: CMakeLists.txt
MyApp/src/: main.cpp
OtherLib/: CMakeLists.txt  OtherLibConfig.cmake
OtherLib/include/Imerso/OtherLib/: Foo.h
OtherLib/src/: Foo.cpp
SomeLib/: CMakeLists.txt  SomeLibConfig.cmake
SomeLib/include/Imerso/SomeLib/: Foo.h
SomeLib/src/: Bar.cpp  Bar.h  Foo.cpp
